# CodeVerse

./: README.md  pyproject.toml
docs/: architecture-and-execution-plan.md  execution-plan.md
src/codeverse/agent/: parser.py  planner.py  runtime.py  safety.py  state.py
src/codeverse/cli/: app.py  main.py
src/codeverse/cli/commands/: analyze.py  chat.py  config.py  debug.py  explain.py  mcp.py  plan.py  report.py  review.py
src/codeverse/config/: models.py  settings.py
src/codeverse/mcp/: client.py  models.py  registry.py
src/codeverse/output/: renderer.py
src/codeverse/providers/: base.py  gemini.py  huggingface.py  openrouter.py  registry.py
src/codeverse/tools/: base.py  code_analysis.py  filesystem.py  git.py  mcp_proxy.py  search.py  shell.py
tests/: conftest.py
tests/agent/: test_runtime.py
tests/cli/: test_cli.py
tests/config/: test_settings.py
tests/mcp/: test_mcp_registry.py
tests/providers/: test_provider_registry.py
tests/tools/: test_tools.py
