[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeverse"
version = "0.1.0"
description = "CLI-first AI coding agent with provider and MCP support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
]

[project.urls]
Homepage = "https://example.com/codeverse"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
codeverse = "codeverse.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
